--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-blinker==1.7.0
-click==8.1.7
-Flask==2.2.5
-itsdangerous==2.1.2
-Werkzeug==3.0.1
-psycopg2
-sqlalchemy==1.4.46
+alembic          1.13.1
+blinker          1.7.0
+click            8.1.7
+Flask            2.2.5
+Flask-Login      0.6.3
+Flask-Migrate    4.0.7
+Flask-SQLAlchemy 2.5.1
+greenlet         3.0.3
+itsdangerous     2.1.2
+Mako             1.3.3
+psycopg2         2.9.9
+SQLAlchemy       1.4.46
+Werkzeug         3.0.2
