--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-click            8.1.7
-Flask            2.2.5
-Flask-SQLAlchemy 3.1.1
-greenlet         3.0.3
-itsdangerous     2.2.0
-psycopg2         2.9.9
-SQLAlchemy       2.0.29
-Werkzeug         3.0.2
+click==8.1.7
+Flask==2.2.5
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+itsdangerous==2.2.0
+psycopg2==2.9.9
+SQLAlchemy==2.0.29
+Werkzeug==3.0.2
